      correctly on some computers
    - Updated Stackzs.c to comply the recent MEX API changes
    - Fixed ProcessIidchannel bug where riceK factor was square-rooted twice    
    - Fix for edge case dopplerSpread == 0
    - Fix for edge case velocitySpread == 0
    - Fix for edge case with riceK -> infinity
    - Fixes to apply doppler shift even when doppler spread is not appropriate
    - Cosmetic and minor performance improvements
    - Updated documentation
___________________________________________________________________________

 *** June 2016:  LLAMAComm (v. 2.17) (MATLAB R2015b)
    - Renamed "user" directory to "user_code". Created "examples" subdirectory
      under "user_code"
    - Moved "BPSKNodes" "InterferenceNodes" and "MIMONodes" directories from
      user_code into user_code/examples/. Also moved "Ex_BuildEnvironment.m" 
      into user_code/examples/
    - Updated example code to reflect new locations with the llamacomm 
      directory tree
    - Updated documentation to reflect changes made to user_code directory
      structure and files
    - Updated all copyright notices
___________________________________________________________________________

 *** April 2016:  LLAMAComm (v. 2.16) (MATLAB R2015b)
    - Added @module/GetProperties.m method.
___________________________________________________________________________

 *** November 2012:  LLAMAComm (v. 2.16) (MATLAB R2011a)
     - Some minor efficiency improvements
     - Fixed bug in simulator/@module/AllSameTxFc.m that cause the second output
       argument "ftout" to not be assigned in all circumstances
     - If called with a single input argument, UpdateTimingDiagram.m is 
       functionally equivalent to "drawnow"
     - Removed the unused "user" parameter from DefaultTDCallback. UpdateTimingDiagram
       was modified to act appropriately *if* a trailing user parameter structure is accepted
       by the timing diagram callback function.