@@ -22,6 +22,7 @@ ___________________________________________________________________________
     - Fix for edge case velocitySpread == 0
     - Fix for edge case with riceK -> infinity
     - Fixes to apply doppler shift even when doppler spread is not appropriate
+    - New function 'GetVelocitySpreadShift' a substitute for 'GetVelocitySpread'
     - Cosmetic and minor performance improvements
     - Updated documentation
 ___________________________________________________________________________
